--- a/CSE360_Project/src/projectbru/PatientView.fxml
+++ b/CSE360_Project/src/projectbru/PatientView.fxml
@@ -3,65 +3,49 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
 
-<FlowPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <AnchorPane prefHeight="400.0" prefWidth="142.0">
+<BorderPane fx:id="rootP" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #c2c2c2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectbru.PatientController">
+   <left>
+      <VBox prefHeight="400.0" prefWidth="142.0" spacing="5.0" style="-fx-background-color: gray; -fx-border-color: black;" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="400.0" prefWidth="142.0" spacing="5.0" style="-fx-background-color: gray; -fx-border-color: black;">
+            <VBox prefHeight="74.0" prefWidth="148.0" spacing="2.0" style="-fx-border-color: black;">
                <children>
-                  <VBox prefHeight="74.0" prefWidth="148.0" spacing="2.0" style="-fx-border-color: black;">
-                     <children>
-                        <Label prefHeight="32.0" prefWidth="95.0" text="&lt;username&gt;">
-                           <padding>
-                              <Insets left="-5.0" />
-                           </padding>
-                        </Label>
-                        <Button mnemonicParsing="false" prefHeight="18.0" prefWidth="74.0" text="Settings">
-                           <VBox.margin>
-                              <Insets left="6.0" />
-                           </VBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" style="-fx-background-color: red; -fx-text-fill: white;" text="Log Out">
-                           <VBox.margin>
-                              <Insets left="6.0" />
-                           </VBox.margin>
-                        </Button>
-                     </children>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
+                  <Label prefHeight="32.0" prefWidth="95.0" text="&lt;username&gt;">
                      <padding>
-                        <Insets bottom="5.0" left="15.0" />
+                        <Insets left="-5.0" />
                      </padding>
-                  </VBox>
-                  <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="150.0" text="List of Visits">
+                  </Label>
+                  <Button mnemonicParsing="false" prefHeight="18.0" prefWidth="74.0" text="Settings">
                      <VBox.margin>
-                        <Insets left="5.0" right="5.0" />
+                        <Insets left="6.0" />
                      </VBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="148.0" text="Message Board">
+                  <Button mnemonicParsing="false" onAction="#logOut" style="-fx-background-color: red; -fx-text-fill: white;" text="Log Out">
                      <VBox.margin>
-                        <Insets left="5.0" right="5.0" />
+                        <Insets left="6.0" />
                      </VBox.margin>
                   </Button>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="15.0" />
+               </padding>
             </VBox>
+            <Button mnemonicParsing="false" onAction="#switchToList" prefHeight="31.0" prefWidth="150.0" text="List of Visits">
+               <VBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </VBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="148.0" text="Message Board">
+               <VBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </VBox.margin>
+            </Button>
          </children>
-      </AnchorPane>
-      <AnchorPane prefHeight="400.0" prefWidth="442.0">
-         <children>
-            <Pane prefHeight="400.0" prefWidth="455.0" style="-fx-background-color: #c2c2c2;">
-               <children>
-                  <Text layoutX="154.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contains the sub-window" />
-               </children>
-            </Pane>
-         </children>
-      </AnchorPane>
-   </children>
-</FlowPane>
+      </VBox>
+   </left>
+</BorderPane>
