--- a/CSE360_Project/src/projectbru/PatientView.fxml
+++ b/CSE360_Project/src/projectbru/PatientView.fxml
@@ -12,7 +12,7 @@
          <children>
             <VBox prefHeight="74.0" prefWidth="148.0" spacing="2.0" style="-fx-border-color: black;">
                <children>
-                  <Label prefHeight="32.0" prefWidth="95.0" text="&lt;username&gt;">
+                  <Label fx:id="username" prefHeight="32.0" prefWidth="95.0" text="&lt;username&gt;">
                      <padding>
                         <Insets left="-5.0" />
                      </padding>
