--- a/CSE360_Project/src/projectbru/MessageBoard.fxml
+++ b/CSE360_Project/src/projectbru/MessageBoard.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MessageBoard">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectbru.MessageBoard">
+    <Label text="To:" />
+    <ComboBox fx:id="recipientComboBox" />
     <ListView fx:id="messageListView" prefHeight="200.0" />
     <TextField fx:id="messageTextField" promptText="Type your message here" />
     <Button text="Post Message" onAction="#postMessage" />
+    <Label fx:id="confirmationLabel" />
 </VBox>
-
