--- a/CSE360_Project/src/projectbru/PatientView.fxml
+++ b/CSE360_Project/src/projectbru/PatientView.fxml
@@ -40,7 +40,7 @@
                   <Insets left="5.0" right="5.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="148.0" text="Message Board">
+            <Button mnemonicParsing="false" onAction="#switchToMessages" prefHeight="33.0" prefWidth="148.0" text="Message Board">
                <VBox.margin>
                   <Insets left="5.0" right="5.0" />
                </VBox.margin>
